Changes for 3.0.16rc1

New features:

Bug fixes:
........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)

--------------------------------------------------------------------------------
Changes for 3.0.15

3.0.15rc1 was released as 3.0.15 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.15rc1

Bug fixes:
....I..... [ZBX-13398] fixed configure script for Debian GNU/Linux "buster" and "sid" to work with PostgreSQL (viktors)
.......PS. [ZBX-13441] fixed crashes in case of failures (e.g. timeouts) during VMware hypervisor discovery (gleb)
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)
...G...... [ZBX-13246] fixed processing of command line arguments which are longer than 2KB for proc.num and proc.mem items on AIX (viktors)
...G...... [ZBX-13254] fixed 'skip' parameter behaviour for log[], log.count[], logrt[], logrt.count[] items in case log files initially do not exist (Andris)
...G...... [ZBX-13253] fixed losing the 1st record by log[] and logrt[] items if 'skip' parameter is used and log file initially is empty (Andris)
A......... [ZBX-12991] removed default values for "active_since" and "active_till" fields in maintenance.create API method (Ivo)
..F....... [ZBX-11305] fixed color and label for event status on event details page (gcalenko)
..F....... [ZBX-13085] fixed trigger mass update form redirect to trigger list on attempt to attach dependent trigger if there was errors in previous submit attempts (gcalenko)
..F....... [ZBX-13078] fixed javascript error in user group permission granting popup (gcalenko)
