@@ -1421,11 +1421,19 @@ out:
 }
 #else
 
+ZBX_THREAD_LOCAL static zbx_uint32_t	mutex_flag = ZBX_MUTEX_ALL_ALLOW;
+
+zbx_uint32_t get_thread_global_mutex_flag()
+{
+	return mutex_flag;
+}
+
 typedef struct
 {
 	zbx_metric_func_t	func;
 	AGENT_REQUEST		*request;
 	AGENT_RESULT		*result;
+	zbx_uint32_t		mutex_flag; /* in regular case should always be = ZBX_MUTEX_ALL_ALLOW */
 	int			agent_ret;
 }
 zbx_metric_thread_args_t;
@@ -1433,6 +1441,7 @@ zbx_metric_thread_args_t;
 ZBX_THREAD_ENTRY(agent_metric_thread, data)
 {
 	zbx_metric_thread_args_t	*args = (zbx_metric_thread_args_t *)((zbx_thread_args_t *)data)->args;
+	mutex_flag = args->mutex_flag;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "executing in data thread for key:'%s'", args->request->key);
 
@@ -1466,7 +1475,8 @@ int	zbx_execute_threaded_metric(zbx_metric_func_t metric_func, AGENT_REQUEST *re
 
 	ZBX_THREAD_HANDLE		thread;
 	zbx_thread_args_t		args;
-	zbx_metric_thread_args_t	metric_args = {metric_func, request, result};
+	zbx_metric_thread_args_t	metric_args = {metric_func, request, result, ZBX_MUTEX_THREAD_DENIED |
+							ZBX_MUTEX_LOGGING_DENIED};
 	DWORD				rc;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() key:'%s'", __function_name, request->key);
